--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,14 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   get: 4.6.5
   intl_phone_number_input: ^0.7.2
+  percent_indicator: ^4.2.2
+  step_progress_indicator: ^1.0.2
 
 dev_dependencies:
   flutter_lints: 2.0.1
@@ -20,4 +23,5 @@ dev_dependencies:
 flutter:
   assets:
     - 'assets/images/'
+    - 'assets/images/menu/'
   uses-material-design: true
