[24/01/2023] Added Detail Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,4 +24,5 @@ flutter:
   assets:
     - 'assets/images/'
     - 'assets/images/menu/'
+    - 'assets/images/detail/'
   uses-material-design: true
