--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get: 4.6.5
   google_sign_in: ^5.4.4
   intl_phone_number_input: ^0.7.2
+  pinput: ^2.2.5
   percent_indicator: ^4.2.2
   step_progress_indicator: ^1.0.2
 
