--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   pinput: ^2.2.5
   percent_indicator: ^4.2.2
   step_progress_indicator: ^1.0.2
+  cloud_firestore: ^4.3.2
 
 dev_dependencies:
   flutter_lints: 2.0.1
