--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,34 +2,38 @@ name: tokopedia
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment:
+environment: 
   sdk: '>=2.18.6 <3.0.0'
 
-dependencies:
+dependencies: 
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.3.2
   cupertino_icons: ^1.0.2
   external_app_launcher: ^3.1.0
+  file_picker: ^5.2.5
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
-  flutter:
-    sdk: flutter
+  firebase_storage: ^11.0.1
   flutter_facebook_auth: ^5.0.7
   get: 4.6.5
   google_sign_in: ^5.4.4
   intl_phone_number_input: ^0.7.2
-  pinput: ^2.2.5
   percent_indicator: ^4.2.2
+  pinput: ^2.2.5
   step_progress_indicator: ^1.0.2
-  cloud_firestore: ^4.3.2
-
-dev_dependencies:
-  flutter_lints: 2.0.1
-  flutter_test:
+  intl: ^0.17.0
+  flutter: 
     sdk: flutter
 
-flutter:
-  assets:
-    - 'assets/images/'
-    - 'assets/images/menu/'
-    - 'assets/images/detail/'
+dev_dependencies: 
+  flutter_lints: 2.0.1
+  flutter_test: 
+    sdk: flutter
+
+flutter: 
+  assets: 
+    - assets/images/
+    - assets/images/menu/
+    - assets/images/detail/
   uses-material-design: true
+
